# nba_scraper

./: README.md  pyproject.toml
src/: fetch_player_stats.py  fetch_player_urls.py
