[tool.poetry]
name = "nba-scraper"
version = "0.1.0"
description = ""
authors = ["Thomas Atkins"]
readme = "README.md"
packages = [{include = "nba_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241009"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240914"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
